# Affinity-Changer

./: CMakeLists.txt  CpuAffinityChanger.yml  README.md  main.c
src/: ctrl.c  ctrl.h  debugScreen.h  main.c
